...
                        <viewControllerLayoutGuide type="bottom" id="wfy-db-euE"/>
                    </layoutGuides>
                    <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                        <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <subviews>
                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="line" placeholder="email" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="9Ar-YZ-Oo0">
                                <rect key="frame" x="58" y="184" width="204" height="30"/>
                                <constraints>
                                    <constraint firstAttribute="width" constant="204" id="VXq-a5-4qF">
                                        <variation key="heightClass=regular-widthClass=regular" constant="408"/>
                                    </constraint>
                                    <constraint firstAttribute="height" constant="30" id="mCn-TQ-eQc"/>
                                </constraints>
                                <nil key="textColor"/>
                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                <textInputTraits key="textInputTraits" autocorrectionType="no" spellCheckingType="no" keyboardType="emailAddress"/>
                            </textField>
                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="line" placeholder="password" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="lrt-gc-pvX">
                                <rect key="frame" x="58" y="234" width="204" height="30"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="30" id="y3O-2N-iDr"/>
                                    <constraint firstAttribute="width" constant="204" id="z8U-FT-vcW">
                                        <variation key="heightClass=regular-widthClass=regular" constant="408"/>
                                    </constraint>
...
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ukQ-De-jlO">
                                <rect key="frame" x="106.5" y="305" width="107" height="46"/>
                                <constraints>
                                    <constraint firstAttribute="width" constant="107" id="ako-gf-NtW"/>
                                    <constraint firstAttribute="height" constant="46" id="mNL-9K-dUX"/>
                                </constraints>
                                <state key="normal" title="Sign In"/>
                                <connections>
                                    <action selector="signInOnClick:" destination="BYZ-38-t0r" eventType="touchUpInside" id="yhx-ES-qO3"/>
                                </connections>
                            </button>
                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="oxb-S1-WFd">
                                <rect key="frame" x="58" y="268.5" width="185.5" height="19.5"/>
...
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="d2s-ir-Cmb">
                                <rect key="frame" x="36" y="156" width="81" height="30"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="30" id="I15-ll-R30"/>
                                </constraints>
                                <fontDescription key="fontDescription" type="system" pointSize="10"/>
                                <state key="normal" title="Add To Favorites"/>
                                <connections>
                                    <action selector="addFavoriteClicked:" destination="dLj-Kj-Kbx" eventType="touchUpInside" id="bh1-Js-6wA"/>
                                </connections>
                            </button>
                        </subviews>
                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
...
