...
            
            self.doneItem.isEnabled = true // Done button is active if we change something in our model.
        }
    }
    
    private func configureDoneButton() {
        doneItem = UIBarButtonItem(title: "Done", style: .plain, target: self, action: #selector(doneButtonClicked))
        navigationItem.title = "Recipe Details"
        navigationItem.rightBarButtonItem = doneItem
        doneItem.isEnabled = false // Done button is disabled by default
    }

    private func loadRecipeDetails() {
        dataManager.getRecipeDetails(by: recipe) { (result) in
...
